# vk-engine

./: .clang-format  .gitmodules  CMakeLists.txt  README.md  main.cpp
docs/: DESIGN.md
ext/: CMakeLists.txt
ext/fmtlog/: CMakeLists.txt  Log.cpp  LogImpl.hpp
ext/fmtlog/include/fmtlog/: Log.hpp
src/: CMakeLists.txt  main.cpp
src/app/: CMakeLists.txt  main.cpp
src/app/shaders/: shader.frag  shader.vert
src/engine/: CMakeLists.txt
src/engine/core/: Buffer.hpp  CMakeLists.txt  CommandPool.cpp  CommandPool.hpp  Device.cpp  Device.hpp  GraphicsPipeline.cpp  GraphicsPipeline.hpp  Image.cpp  Image.hpp  Instance.cpp  Instance.hpp  RenderPass.cpp  RenderPass.hpp  ShaderModule.cpp  ShaderModule.hpp  Swapchain.cpp  Swapchain.hpp  Sync.cpp  Sync.hpp  Vertex.hpp  WindowSystem.hpp
src/engine/utils/: CMakeLists.txt  to_string.cpp  to_string.hpp  vk.hpp
src/engine/win32/: CMakeLists.txt  GlfwWindowSystem.cpp  GlfwWindowSystem.hpp
src/vulkan/: to_string.cpp
src/vulkan/shaders/: CMakeLists.txt  shader.frag
src/vulkan/utils/: to_string.cpp  to_string.hpp
